MDEV-21644 Assertion thd->transaction.xid_state.is_explicit_XA() in  binlog_commit_flush_trx_cache

The reason for assert was unexpected combinaton of inefficient update on
trx engine and ONE phase commit.
It is refined. A test is added that also revealed a missed piece of cleanup
for engine prepared transaction object.
Exra reset is conveyed: trx->mysql_log_file_name = 0.